deployment, evaluation, conclusion

--- a/Inhalt/01_Standard/sperrvermerk.tex
+++ b/Inhalt/01_Standard/sperrvermerk.tex
@@ -1,11 +1,3 @@
-\chapter*{Sperrvermerk}
-Die nachfolgende Arbeit enthält vertrauliche Daten der:
-\begin{quote}
-	\firmaName \\
-	\firmaStrasse \\
-	\firmaPlz
-\end{quote}
+\chapter*{Restriction Notice}
 
-\vspace{0.5cm}
-
-Der Inhalt dieser Arbeit darf weder als Ganzes noch in Auszügen Personen außerhalb des Prüfungsprozesses und des Evaluationsverfahrens zugänglich gemacht werden, sofern keine anderslautende Genehmigung vom Dualen Partner vorliegt.
+This Bachelor thesis contains strictly confidential information and business se- crets of SAP SE. It is exclusively provided as an examination submission. Disclo- sure of information to anyone other than the examination board or lectors is not authorized. Copying, quoting, duplicating or publishing is not allowed without the explicit written authorization of SAP SE.
