--- a/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
+++ b/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
@@ -1,12 +1,12 @@
 \chapter{Objectives and Criteria}
 \section{Detailed Task Description}
-
+\label{section:detailed-task}
 The goal of this thesis is adding value to real business documents by transforming unstructured data into a structured format. The structured information can then be used as a base for further analyses. 
 
 The task is to perform a full data analysis on the supplied dataset. The dataset is to be prepared for processing with established methods. An evaluation for different means of feature extraction, machine learning, model evaluation and visualization should be performed. With the evaluation a complete flow for the data processing should be presented. The result is an added value to the dataset by creating structured data and providing insights into this data.
 
 \section{Criteria}
-
+\label{section:criteria}
 The task includes different criteria from a corporate perspective which need to be considered. The analysis should be performed utilizing only available resources, which are the student’s company laptop and already available instances for SAP internal services. The dataset which will later be presented is only available to SAP employees, and only after an access request for a specific use case is approved. Therefore, the tasks need to be completed with special attention to data protection. 
 
 Additional quality criteria were established before the start of the work. Firstly, the solution should be designed according to industry standards. This also includes the choice for a fitting research model. Secondly, the source code is to be documented in such a way, that an expert third party can understand the workings of it in an appropriate time. Thirdly, the design of the source code should account for existing hardware limitations and should be optimized computationally.
