--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -2,6 +2,7 @@
 In the guide complementing the \ac{CRISP-DM} model, different tasks, and outputs for developing a business understanding are mentioned. The task and respective output will be discussed in the following sections.
 
 \section{Business Objectives}
+\label{section:business-objectives}
 Businesses without existing an \ac{ERP} solution in place can easily be overwhelmed by the number of invoices reaching them daily. Even more, the controlling department can easily lose the overview of spending. To quickly gain a perspective on the most important spending topics, spending should be sorted in categories of similar nature.
 
 The primary goal is the development of a solution for automatic aggregation of documents, based on topics addressed in those documents. The focus is on shorter text segments, such as product descriptions. The business objective is an information gain, on how spending is distributed among cross-cutting topics in a company.
@@ -65,9 +66,11 @@ To summarize both relevant data mining and business terminology, a glossary was 
 	\paragraph{SAP AI Launchpad} The SAP AI Launchpad is a tool for the operation of AI content inside an SAP system.
 	\paragraph{SAP AI Core} SAP AI Core allows for training and serving AI scenarios \cite{schmitzLeonardo}.
 	\paragraph{Token}
+	\paragraph{Underfitting}
 
 
 \section{Data Mining Goals}
+\label{section:data-mining-goals}
 The following data mining goals were identified during the phase of business understanding:
 
 \begin{enumerate}
@@ -81,10 +84,6 @@ The successful outcome is defined by reaching all named criteria. The achievemen
 
 
 \section{Project Plan}
-
-\subsection{Project Plan}
-\textcolor{red}{I don't think I will need this...}
-
 \subsection{Initial assessment of tools and techniques}
 
 \paragraph{Programming Language}
