--- a/Inhalt/04_Inhalt/content_data_understanding.tex
+++ b/Inhalt/04_Inhalt/content_data_understanding.tex
@@ -112,7 +112,7 @@ The invoices cover only a part of all billing documents received in the time fra
 Additionally, the data exploration has shown, that about one fourth of the descriptions are either empty or contain a placeholder for a missing value ('nan'). During data cleaning, even more unusable values will turn up. Still, a pessimistic estimate of 100,000 unique descriptions is a large enough dataset for telling analyses.
 
 \paragraph{Correctness}
-The data was created with the help of an annotation service. The vendor specializes on \ac{OCR} and \acf{NLP} to extract data from real documents, including invoices. Extractions results by this vendor have a guaranteed accuracy of 99\% \cite{scaleaiScaleDocumentAI}.
+The data was created with the help of an annotation service. The vendor specializes on optical character recognition and \acf{NLP} to extract data from real documents, including invoices. Extractions results by this vendor have a guaranteed accuracy of 99\% \cite{scaleaiScaleDocumentAI}.
 \paragraph{Timeliness}
 The dataset consists of invoices in the time frame from 2015 to 2019, which makes it timely enough for the task.
 \paragraph{Consistency}
