--- a/Inhalt/04_Inhalt/content_deployment.tex
+++ b/Inhalt/04_Inhalt/content_deployment.tex
@@ -1,3 +1,21 @@
-\chapter{Deployment}
 
-Tableau Dashboard
+\chapter{Deployment}
+	The analysis results are targeted at decision-makers such as financial analysts and strategists. The clustering results can be part of a in-depth financial analysis, and provide a very broad overview on spending.
+	
+	The questions this overview should answer are:
+	\begin{itemize}
+		\item Which spending categories exist?
+		\item How does the spending divide onto the categories?
+		\item Which magnitude exists between the different amounts spent?
+	\end{itemize}
+	
+	The results of an analysis are often summarized using a business intelligence visualization tool. In this case, the analysis is visualized using Tableau.
+	\begin{figure}[!h]
+		\centering
+		\includegraphics[width=\linewidth]{"../../../Pictures/Photos Library.photoslibrary/originals/3/3A5CABAF-DE93-48E0-9081-6DAD2B650255"}
+		\caption{Tableau Dashboard: Overview on the largest Spending Categories}
+		\label{fig:dashboard}
+	\end{figure}
+
+	The dashboard answers all questions. First, it shows the big picture of spending. Additional insights are in the tool tips of each bubble in the chart. The table on the right hand side provides a convenient ranking of the different spending categories.
+	
