--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -509,7 +509,7 @@
   file = {/Users/I518232/Zotero/storage/4SC9XTD9/dimensionality-reduction-for-data-visualization-pca-vs-tsne-vs-umap-be4aa7b1cb29.html}
 }
 
-@book{vajjala2020practical,
+@book{practicalNLP2,
   title = {Practical Natural Language Processing: {{A}} Comprehensive Guide to Building Real-World {{NLP}} Systems},
   author = {Vajjala, S. and Majumder, B. and Gupta, A. and Surana, H.},
   date = {2020},
@@ -797,6 +797,18 @@
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computation and Language},
   file = {/Users/I518232/Zotero/storage/7VB2EWHD/Mikolov et al. - 2013 - Efficient Estimation of Word Representations in Ve.pdf;/Users/I518232/Zotero/storage/8XHX2DDH/1301.3781.pdf;/Users/I518232/Zotero/storage/NLS24PG4/1301.html}
+}
+
+@online{yildirimTwoChallengesKMeans2020,
+  title = {Two {{Challenges}} of {{K-Means Clustering}}},
+  author = {Yıldırım, Soner},
+  date = {2020-04-06T22:12:31},
+  url = {https://towardsdatascience.com/two-challenges-of-k-means-clustering-72e90bdeb0da},
+  urldate = {2022-05-24},
+  abstract = {How to “wisely” pick k and initial centroids},
+  langid = {english},
+  organization = {{Medium}},
+  file = {/Users/I518232/Zotero/storage/NMHKTQAU/two-challenges-of-k-means-clustering-72e90bdeb0da.html}
 }
 
 @article{zotero-1,
