--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -63,22 +63,22 @@
 
 % ------ Erklärung, Sperrvermerk, Abstact
 %\include{Inhalt/01_Standard/erklaerung}
-%\include{Inhalt/01_Standard/sperrvermerk}
+\include{Inhalt/01_Standard/sperrvermerk}
 %\include{Inhalt/02_Abstract/abstract-en}
 %\include{Inhalt/02_Abstract/abstract-de}
 
 % ------ Inhaltsverzeichnis
 \singlespacing
-\setcounter{tocdepth}{10}
+\setcounter{tocdepth}{1}
 \tableofcontents
 
 % ------ Verzeichnisse
 \renewcommand*{\chapterpagestyle}{plain}
 \pagestyle{plain}
 %\include{Inhalt/03_Verzeichnisse/formelgroessen}
-\begin{spacing}{0.5}
+
 \include{Inhalt/03_Verzeichnisse/abkuerzungen}
-\end{spacing}
+
 \listoffigures                          % Erzeugen des Abbildungsverzeichnisses 
 \listoftables                           % Erzeugen des Tabellenverzeichnisses
 %\renewcommand{\lstlistlistingname}{Quellcodeverzeichnis}
