--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -10,7 +10,7 @@ An essential part of economic counseling is the assessment of spending for diffe
 The global market is estimated to comprise 550 billion invoices annually, but 90\% are exchanged paper-based \cite{kochEInvoicingJourney}. With modern technology, these paper-based or digital documents can be transformed into a structured or semi-structured format. According to expert estimates, unstructured data makes up for more than 80\% of enterprise data \cite{structuredAndUnstructuredData}. Companies can not utilize unstructured data to its full potential, as this data is not able to be leveraged with traditional data analysis tools.
 
 \section{Research Questions}
-\label{research-q}
+\label{section:research-q}
 How can information from invoice-like documents be extracted?
 How can extracted information provide insights?
 
